--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Sign Up</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="normalize.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <header>
+      <p>Sign Up For My Web App</p>
+    </header>
+    <form id="content"></form>
+    <footer>
+      <button>Submit Form</button>
+    </footer>
+  </div>
   <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
